crates/test-files/fixtures/compile_errors/ctx_builtins_param_incorrect_type.fe
contract Barn {
    pub fn cow() {}
}

contract Foo {
    pub fn bar(ctx: Context) {
        let created_barn: Barn = Barn.create(address(26), 0)
    }
}
